--- a/src/app/stringdisplay/stringdisplay.component.html
+++ b/src/app/stringdisplay/stringdisplay.component.html
@@ -1,3 +1,3 @@
-<p>stringdisplay works!</p>
-<p> {{current_text}}</p>
-<button (click)="onClicked()">A button</button>
+<button (click)="onEraseClicked()">Erase text</button>
+<button (click)="onWriteClicked()">Write text</button>
+<p>{{current_text}}</p>
